# riscv-emulator

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  output.rs
.github/workflows/: CD.yml  CI.yml
benches/: bench_emulator.rs
data/: instr_dict.json  instr_dict_custom.json  instr_dict_illegal.json
doc/: todo.md
doc/device/: uart.md  virtio.md
doc/isa/riscv/: csr_reg.md
dts/: virt.dts
src/: async_poller.rs  background.rs  cli_coordinator.rs  config.rs  dbg_repl.rs  device_poller.rs  handle_trait.rs  lib.rs  load.rs  logging.rs  main.rs  ram.rs  utils.rs  vaddr.rs  vclock.rs  wasm_api.rs  welcome.rs
src/board/: mod.rs  virt.rs
src/byte_io/: common.rs  mod.rs  terminal_io.rs
src/cpu/: float_reg_file.rs  mod.rs  reg_file.rs  vector_reg_file.rs
src/device/: aclint.rs  cli_uart.rs  config.rs  fast_uart.rs  id_allocator.rs  mmio.rs  mod.rs  power_manager.rs  test_device.rs  uart.rs  virtio.rs
src/device/fast_uart/: mod.rs  terminal_io.rs  virtual_io.rs
src/device/plic/: irq_line.rs  mod.rs
src/device/virtio/: common.rs  config.rs  virtio_blk.rs  virtio_device.rs  virtio_mmio.rs  virtio_queue.rs
src/fpu/: mod.rs  soft_float.rs
src/gdb/: basic.rs  breakpoints.rs  desc.rs  eventloop.rs  mod.rs
src/isa/: cache.rs  icache.rs  mod.rs  utils.rs
src/isa/riscv/: cpu_tester.rs  debugger.rs  executor.rs  isa_builder.rs  mod.rs  vaddr.rs
src/isa/riscv/csr_reg/: csr_macro.rs  m_utils.rs  mod.rs  read_validator.rs  utils.rs  validator.rs  write_validator.rs
src/isa/riscv/decoder/: compress_decoder.rs  funct_decoder.rs  mask_decoder.rs  mod.rs
src/isa/riscv/instruction/: exec_atomic_function.rs  exec_compress_function.rs  exec_core.rs  exec_float_function.rs  exec_function.rs  exec_mapping.rs  exec_vector_function.rs  instr_table.rs  mod.rs  rv32i_table.rs
src/isa/riscv/mmu/: address.rs  config.rs  mod.rs
src/isa/riscv/mmu/page_table/: mod.rs  riscv64.rs
src/isa/riscv/trap/: mod.rs  trap_controller.rs
src/isa/riscv/vector/: integer.rs  mod.rs  tester.rs  types.rs
src/isa/riscv/vector/arithmetic/: fix_point_impl.rs  fix_point_test.rs  integer_impl.rs  integer_test.rs  mod.rs
src/isa/riscv32/: decoder.rs  executor.rs  instr.rs  mod.rs
src/isa/riscv32/csr_reg/: csr_macro.rs  machine_mode.rs  mod.rs
src/isa/riscv32/decoder/: funct_decoder.rs  mask_decoder.rs  mod.rs
src/isa/riscv32/instruction/: exec_function.rs  exec_mapping.rs  mod.rs  rv32i_table.rs
src/rvdb/: handler.rs  mod.rs  printer.rs  repl.rs
test/: Makefile  linker.ld
test/include/: log.h
test/lib/: log.c
test/src/: fib.c  main.c
test_resources/: Makefile
test_resources/include/: io.h  log.h  power.h  rvv_test.h  syscall.h  trap.h
test_resources/include/virtio/: virtio_blk.h  virtio_mmio.h  virtio_queue.h
test_resources/lib/: io.c  log.c  power.c  trap.S  trap_handler.c
test_resources/src/: boot.S  clint.c  ecall_test.c  fib.c  float.c  interrupt_test.c  io_bench.c  main.c  matrix_mul.c  prime.c  trap.S  trap_test.c  uart_interrupt_test.c  vector_kernels.c  virtio_blk_test.c
tests/: riscv_tests.rs  rv64ui_integration.rs
tests/arch-test/: config.ini
tests/arch-test/rvemu/: riscof_rvemu.py  rvemu_isa.yaml
tests/arch-test/rvemu/env/: model_test.h
