[package]
name = "riscv-emulator"
version = "0.1.0"
edition = "2024"

[features]
riscv32 = []
riscv64 = []
riscv-tests = []
test-device = ["riscv64"]
custom-instr = ["riscv64"]

default = ["riscv64", "test-device", "custom-instr"]

[dependencies]
xmas-elf = "0.7.0"
log = "0.4"
rand = "0.9.2"
seq-macro = "0.3.0"
flexi_logger = "0.31.2"
crossterm = "0.28"
clap = { version = "4.5.43", features = ["derive"] }
lazy_static = "1.5.0"
rand_chacha = "0.9.0"
thiserror = "1.0"
crossbeam = "0.8.4"
smallvec = "1.15.1"
phf = { version = "0.12", features = ["macros"] }
rustyline = "17.0.1"
bitflags = { version = "2.9.3" }
rustc_apfloat = "0.2.3"
num_enum = { version = "0.7.4" }
bit-set = { version = "0.8.0 " }

[build-dependencies]
serde_json = "1.0.142"

[lib]
doctest = false

[profile.release]
debug = true

[dev-dependencies.cargo-husky]
version = "1"
default-features = false                                         # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_emulator"
path = "benches/bench_emulator.rs"
harness = false
