# allow setting rustflags in profiles
cargo-features = ["profile-rustflags"]

[package]
name = "riscv-emulator"
version = "0.1.0"
edition = "2024"

[features]
multithreading = []
native-cli = ["dep:clap", "dep:crossterm", "dep:flexi_logger", "dep:rustyline"]
web = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:wasm-logger"]

riscv32 = []
riscv64 = []
riscv-tests = []
test-device = ["riscv64"]
custom-instr = ["riscv64"]

default = [
    "riscv64",
    "native-cli",
    "test-device",
    "riscv-tests",
    "multithreading",
]

[dependencies]
xmas-elf = "0.7.0"
log = "0.4"
rand = { version = "0.9.2", default-features = false, features = ["std"] }
seq-macro = "0.3.0"
lazy_static = "1.5.0"
rand_chacha = { version = "0.9.0", default-features = false, features = [
    "std",
] }
thiserror = "1.0"
crossbeam = "0.8.4"
smallvec = "1.15.1"
phf = { version = "0.12", features = ["macros"] }
bitflags = { version = "2.9.3" }
rustc_apfloat = "0.2.3"
num_enum = { version = "0.7.4" }
bit-set = { version = "0.8.0" }
gdbstub_arch = "0.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flexi_logger = { version = "0.31.2", optional = true }
crossterm = { version = "0.28", optional = true }
clap = { version = "4.5.43", features = ["derive"], optional = true }
rustyline = { version = "17.0.1", optional = true }
gdbstub = "0.7.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-logger = { version = "0.2.0", optional = true }

[build-dependencies]
serde_json = "1.0.142"

[lib]
doctest = false
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "riscv-emulator"
path = "src/main.rs"
required-features = ["native-cli"]

# For `cargo flamegraph`.
# > Note: If you're using lld (which is the default since Rust 1.90.0) or mold on Linux, you must use the --no-rosegment flag.
# > Otherwise perf will not be able to generate accurate stack traces (explanation).
# See: https://github.com/flamegraph-rs/flamegraph
[profile.dev]
rustflags = ["-Clink-arg=-Wl,--no-rosegment"]

[profile.fast-debug]
inherits = "dev"
rustflags = ["-Clink-arg=-Wl,--no-rosegment"]

opt-level = 2
debug = true
debug-assertions = true
overflow-checks = false

lto = "off"
codegen-units = 16
incremental = true

[dev-dependencies.cargo-husky]
version = "1"
default-features = false                                         # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_emulator"
path = "benches/bench_emulator.rs"
harness = false
